# harnx

./: .gitignore  .tool-versions  AGENTS.md  Argcfile.sh  Cargo.toml  README.md  config.agent.example.md  config.agent.example.yaml  config.example.yaml  knope.toml  models.yaml  renovate.json
.cargo/: config.toml
assets/: playground.html
crates/harnx/: Cargo.toml  models.yaml
crates/harnx-acp/: Cargo.toml
crates/harnx-acp-server/: Cargo.toml
crates/harnx-acp-server/src/: lib.rs  server_main.rs  test_regression_issue_68.rs
crates/harnx-acp/src/: client.rs  config.rs  event.rs  lib.rs  manager.rs
crates/harnx-client/: Cargo.toml
crates/harnx-client/src/: azure_openai.rs  bedrock.rs  claude.rs  client.rs  cohere.rs  gemini.rs  lib.rs  macros.rs  model.rs  openai.rs  openai_compatible.rs  stream.rs  vertexai.rs
crates/harnx-core/: Cargo.toml
crates/harnx-core/src/: abort.rs  agent_config.rs  api_types.rs  cli.rs  config_data.rs  config_paths.rs  context.rs  error.rs  event.rs  hooks.rs  input.rs  last_message.rs  lib.rs  llm_trace.rs  macros.rs  message.rs  model.rs  path.rs  retry_config.rs  session.rs  sink.rs  system_vars.rs  text.rs  tool.rs  working_mode.rs
crates/harnx-core/src/provider_config/: azure_openai.rs  bedrock.rs  claude.rs  cohere.rs  gemini.rs  mod.rs  openai.rs  openai_compatible.rs  vertexai.rs
crates/harnx-engine/: Cargo.toml
crates/harnx-engine/src/: chat_completions.rs  engine.rs  input.rs  lib.rs  retry.rs  tool.rs
crates/harnx-engine/tests/: run_turn.rs
crates/harnx-fetch/: Cargo.toml
crates/harnx-fetch/src/: command.rs  lib.rs  loader.rs  request.rs  utils.rs
crates/harnx-hooks/: Cargo.toml
crates/harnx-hooks/src/: async_manager.rs  dispatch.rs  executor.rs  lib.rs  matcher.rs  persistent.rs  prompt.rs
crates/harnx-mcp/: Cargo.toml
crates/harnx-mcp-bash/: Cargo.toml
crates/harnx-mcp-bash/src/: main.rs  server.rs
crates/harnx-mcp-fs/: Cargo.toml
crates/harnx-mcp-fs/src/: main.rs  server.rs  summary.rs
crates/harnx-mcp-history/: Cargo.toml
crates/harnx-mcp-history/src/: classify.rs  diff.rs  discover.rs  history.rs  lib.rs  rollback.rs
crates/harnx-mcp-plans/: Cargo.toml
crates/harnx-mcp-plans/src/: main.rs  server.rs
crates/harnx-mcp-time/: Cargo.toml
crates/harnx-mcp-time/src/: server.rs
crates/harnx-mcp-todo/: Cargo.toml
crates/harnx-mcp-todo/src/: main.rs  server.rs
crates/harnx-mcp/src/: client.rs  config.rs  convert.rs  lib.rs
crates/harnx-rag/: Cargo.toml
crates/harnx-rag/src/: lib.rs
crates/harnx-render/: Cargo.toml
crates/harnx-render/src/: lib.rs  markdown.rs
crates/harnx-runtime/: Cargo.toml
crates/harnx-runtime/src/: agent_loop.rs  bootstrap.rs  commands.rs  lib.rs  tool.rs
crates/harnx-runtime/src/client/: common.rs  message.rs  mod.rs  retry.rs
crates/harnx-runtime/src/config/: agent.rs  input.rs  mod.rs  session.rs  session_meta.rs  session_meta_test_extra.rs
crates/harnx-runtime/src/test_utils/: mock_client.rs  mod.rs
crates/harnx-runtime/src/utils/: command.rs  mod.rs  session_name.rs  terminal_session.rs
crates/harnx-serve/: Cargo.toml
crates/harnx-serve/assets/: arena.html
crates/harnx-serve/src/: lib.rs
crates/harnx-spinner/: Cargo.toml
crates/harnx-spinner/src/: lib.rs
crates/harnx-test-bins/: Cargo.toml
crates/harnx-test-bins/src/: lib.rs
crates/harnx-tui/: Cargo.toml
crates/harnx-tui/src/: agent_event_sink.rs  input.rs  lib.rs  lifecycle.rs  prompt.rs  render.rs  render_helpers.rs  terminal.rs  tests.rs  types.rs
crates/harnx-tui/src/snapshots/: harnx_tui__tests__action_menu_popup.snap  harnx_tui__tests__assistant_text_with_seq_number.snap  harnx_tui__tests__basic_message_and_streaming_response.snap  harnx_tui__tests__help_in_tui.snap  harnx_tui__tests__highlight_range.snap  harnx_tui__tests__highlight_single_item.snap  harnx_tui__tests__info_session_with_session_in_tui.snap  harnx_tui__tests__info_session_without_session_in_tui.snap  harnx_tui__tests__input_word_wraps_long_line.snap  harnx_tui__tests__meta_suffix_both_off.snap  harnx_tui__tests__meta_suffix_both_on.snap  harnx_tui__tests__meta_suffix_seq_only.snap  harnx_tui__tests__meta_suffix_ts_only.snap  harnx_tui__tests__modal_confirm_delete_range.snap  harnx_tui__tests__modal_confirm_delete_single.snap  harnx_tui__tests__modal_confirm_rewind.snap  harnx_tui__tests__mutation_notice_renders_with_yellow_dim_style.snap  harnx_tui__tests__pending_message_busy_state.snap  harnx_tui__tests__screen_overflow_and_word_wrap.snap  harnx_tui__tests__sub_agent_activity_dedup_after_all_tools.snap  harnx_tui__tests__sub_agent_activity_dedup_after_first_tools.snap  harnx_tui__tests__sub_agent_activity_dedup_final.snap  harnx_tui__tests__sub_agent_heading_transitions_in_tui.snap  harnx_tui__tests__submitted_message_with_text_attachment.snap  harnx_tui__tests__tall_multiline_input.snap  harnx_tui__tests__thinking_stream_coalescing_around_tool_calls.snap  harnx_tui__tests__tool_call_display_format.snap  harnx_tui__tests__tool_call_with_seq_number.snap  harnx_tui__tests__user_text_with_seq_number.snap
crates/harnx-tui/src/test_utils/: mod.rs  tui_harness.rs
crates/harnx/src/: agent_event_sink.rs  cli_event_sink.rs  commands.rs  lib.rs  main.rs  mcp_safety.rs  serve.rs  tool.rs  ui_output.rs
crates/harnx/src/acp/: client.rs  mod.rs  server.rs
crates/harnx/src/client/: azure_openai.rs  bedrock.rs  claude.rs  cohere.rs  common.rs  gemini.rs  macros.rs  message.rs  mod.rs  model.rs  openai.rs  openai_compatible.rs  retry.rs  vertexai.rs
crates/harnx/src/config/: agent.rs  input.rs  mod.rs  session.rs
crates/harnx/src/hooks/: dispatch.rs  mod.rs  persistent.rs
crates/harnx/src/rag/: mod.rs
crates/harnx/src/render/: mod.rs  stream.rs
crates/harnx/src/test_utils/: interrupt.rs  mock_openai_server.rs  mod.rs  sync.rs  tui_harness.rs
crates/harnx/src/tui/: input.rs  lifecycle.rs  mod.rs  prompt.rs  render_helpers.rs  tests.rs  types.rs
crates/harnx/src/utils/: abort_signal.rs  command.rs  mod.rs  spinner.rs  variables.rs
crates/harnx/tests/: engine_smoke.rs  interrupt_e2e.rs  tmux_e2e.rs
(+268 files in other folders)
