[workspace]
resolver = "2"
members = [
    "crates/harnx",
]

[workspace.package]
version = "0.30.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "All-in-one LLM CLI Tool"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dobesv/harnx"
repository = "https://github.com/dobesv/harnx"
categories = ["command-line-utilities"]
keywords = ["chatgpt", "llm", "cli", "ai", "tui"]

[profile.release]
lto = true
strip = true
opt-level = "z"
