[workspace]
resolver = "2"
members = [
    "crates/harnx",
    "crates/harnx-mcp-todo",
]

[workspace.package]
version = "0.30.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "All-in-one LLM CLI Tool"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dobesv/harnx"
repository = "https://github.com/dobesv/harnx"
categories = ["command-line-utilities"]
keywords = ["chatgpt", "llm", "cli", "ai", "tui"]

[profile.release]
lto = true
strip = true
opt-level = "z"

[workspace.dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.29"
inquire = "0.9.0"
is-terminal = "0.4.9"
ratatui = { version = "0.30.0", features = ["crossterm_0_29", "unstable-rendered-line-info"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["preserve_order"] }
serde_yaml = "0.9.17"
tokio = { version = "1.48", features = ["rt", "time", "macros", "signal", "rt-multi-thread", "io-util", "process"] }
tokio-graceful = "0.2.2"
tokio-stream = { version = "0.1.15", default-features = false, features = ["sync"] }
crossterm = "0.29"
chrono = "0.4.23"
chrono-tz = "0.10"
iana-time-zone = "0.1"
bincode = { version = "2.0.1", features = ["serde", "std"], default-features = false }
parking_lot = "0.12.1"
fancy-regex = "0.17.0"
base64 = "0.22.0"
nu-ansi-term = "0.50.0"
async-trait = "0.1.74"
textwrap = "0.16.0"
ansi_colours = "1.2.2"
reqwest-eventsource = { git = "https://github.com/jpopesculian/reqwest-eventsource", rev = "356e2f61827b193bd5ab389c38059bcc2eed90aa" }
simplelog = "0.12.1"
log = "0.4.20"
shell-words = "1.1.0"
sha2 = "0.11.0"
unicode-width = "0.2.0"
async-recursion = "1.1.1"
http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "client-legacy"] }
time = { version = "0.3.36", features = ["macros"] }
indexmap = { version = "2.2.6", features = ["serde"] }
hmac = "0.13.0"
aws-smithy-eventstream = "0.60.4"
urlencoding = "2.1.3"
unicode-segmentation = "1.11.0"
json-patch = { version = "4.0.0", default-features = false }
bitflags = "2.5.0"
path-absolutize = "3.1.1"
hnsw_rs = "0.3.0"
rayon = "1.10.0"
uuid = { version = "1.9.1", features = ["v4"] }
scraper = { version = "0.26.0", default-features = false, features = ["deterministic"] }
sys-locale = "0.3.1"
html_to_markdown = "0.1.0"
os_info = { version = "3.8.2", default-features = false }
bm25 = { version = "2.0.1", features = ["parallelism"] }
which = "8.0.0"
fuzzy-matcher = "0.3.7"
terminal-colorsaurus = "1.0.3"
duct = "1.0.0"
rmcp = { version = "1.3.0", features = ["client", "server", "transport-child-process", "transport-io"] }
process-wrap = { version = "9", features = ["tokio1"] }
libc = "0.2"
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "ec9ceae869b240643ce73bca1b9daf7c266c116b" }
glob = "0.3"
globset = "0.4"
shellexpand = "3.1.0"
schemars = "1.0"
ratatui-textarea = "0.9.0"
ratatui_widget_scrolling = "0.1.0"
jiff = { version = "0.2.23", features = ["serde"] }
reqwest = { version = "0.13.0", features = ["json", "multipart", "socks", "rustls", "stream"], default-features = false }
syntect = { version = "5.0.0", features = ["parsing", "regex-onig", "plist-load"], default-features = false }
arboard = { version = "3.3.0", default-features = false }
