[package]
name = "harnx-acp-server"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "harnx-acp-server"
path = "src/bin/harnx-acp-server.rs"

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
harnx-acp = { workspace = true }
harnx-core = { path = "../harnx-core" }
harnx-render = { path = "../harnx-render" }
harnx-runtime = { path = "../harnx-runtime" }
log = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
