[package]
name = "harnx-acp"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ACP (Agent Client Protocol) client + shared types for harnx"
repository.workspace = true

[dependencies]
harnx-core = { path = "../harnx-core" }
serde = { workspace = true }

[dev-dependencies]
