[package]
name = "harnx-acp"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ACP (Agent Client Protocol) client + shared types for harnx"
repository.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
harnx-core = { path = "../harnx-core" }
harnx-spinner = { path = "../harnx-spinner" }
indexmap = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
