[package]
name = "harnx-core"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types, event model, and pure utilities for the harnx workspace"

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
hmac = { workspace = true }
indexmap = { workspace = true }
path-absolutize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
urlencoding = { workspace = true }
