[package]
name = "harnx-engine"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified LLM + tool-call loop for harnx, emitting AgentEvent streams consumed by every front-end (TUI, CLI, HTTP, ACP)"

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
harnx-client = { path = "../harnx-client" }
harnx-core = { path = "../harnx-core" }
harnx-render = { path = "../harnx-render" }
parking_lot = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
