[package]
name = "harnx-hooks"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lifecycle hooks (subprocess-driven) for harnx"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
fancy-regex = { workspace = true }
harnx-core = { path = "../harnx-core" }
inquire = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
