[package]
name = "harnx-mcp-fs"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server that exposes filesystem operations with safety guards"

[dependencies]
anyhow = { workspace = true }
fancy-regex = { workspace = true }
gix = { workspace = true }
glob = { workspace = true }
harnx-mcp = { path = "../harnx-mcp" }
harnx-mcp-history = { workspace = true }
log = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
uuid = { workspace = true }

[[bin]]
name = "harnx-mcp-fs"
path = "src/main.rs"
