[package]
name = "harnx-mcp-history"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Git-backed local history and rollback for harnx MCP servers"

[dependencies]
anyhow = { workspace = true }
gix = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
log = { workspace = true }
shell-words = { workspace = true }

[dev-dependencies]
tempfile = "3"
