[package]
name = "harnx-mcp-plans"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server that exposes a file-based plan/task/note management system"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
schemars = { workspace = true }

[[bin]]
name = "harnx-mcp-plans"
path = "src/main.rs"
