[package]
name = "harnx-mcp-time"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server that exposes time and timezone utilities"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
iana-time-zone = { workspace = true }
jiff = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "harnx-mcp-time"
path = "src/main.rs"
