[package]
name = "harnx-mcp"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) support for harnx: safety/validation utilities and (future) client glue"

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
harnx-core = { path = "../harnx-core" }
indexmap = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
process-wrap = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process"] }

[dev-dependencies]
dirs = { workspace = true }
uuid = { workspace = true }
