[package]
name = "harnx-serve"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "harnx-serve"
path = "src/bin/harnx-serve.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
harnx-core = { path = "../harnx-core" }
harnx-rag = { path = "../harnx-rag" }
harnx-render = { path = "../harnx-render" }
harnx-runtime = { path = "../harnx-runtime" }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-graceful = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
