[package]
name = "harnx-spinner"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal spinner + abortable-run helpers for harnx"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
harnx-core = { path = "../harnx-core" }
tokio = { workspace = true, features = ["sync"] }
