[package]
name = "harnx-test-bins"
version = "0.30.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal dev/test binaries for harnx development. Not published."
publish = false

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
ratatui = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "harnx-mcp-repro249"
path = "src/bin/harnx-mcp-repro249/main.rs"

[[bin]]
name = "harnx-acp-test"
path = "src/bin/harnx-acp-test/main.rs"

[[bin]]
name = "harnx-mock-llm"
path = "src/bin/harnx-mock-llm/main.rs"

[[bin]]
name = "harnx-test-ratatui"
path = "src/bin/harnx-test-ratatui.rs"
